--- a/vidaacademica.html
+++ b/vidaacademica.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href=".\formatação.css">
+    <link rel="stylesheet" type="text/css" href=".\main.css">
 </head>
 
 <body>
