--- a/_html/conquistas.html
+++ b/_html/conquistas.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href=".\main.css">
+    <link rel="stylesheet" type="text/css" href="..\_css\main.css">
 </head>
 
 
 <body>
 
-<figure class="icone"><img src=".\iconeconquistas.jpg"></figure>
+<figure class="icone"><img src="..\_imagens\iconeconquistas.jpg"></figure>
 
 <h4>CONQUISTAS E PERSPECTIVAS FUTURAS</h4>
 
@@ -24,7 +24,7 @@
 </nav>
 
 <div id="perfilacao">
-	<figure class="fotoperfil"><img src='.\Foto de Perfil.png'></figure>
+	<figure class="fotoperfil"><img src='..\_imagens\Foto de Perfil.png'></figure>
 	<h1>Arthur Andrade Lacet Florêncio</h1></br></br>
 	<h2>18 anos</h2></br></br>
 	<h3>1° Período - Ciência da Computação</br></br>
@@ -65,7 +65,7 @@
 
 <footer id='rodape'>
 	<a id='instacp' target='_blank' href="https://www.instagram.com/arthur_lacet/"> Instagram </a>
-	<figure class="imginstacp"><img src=".\instagram.jpg"></figure>
+	<figure class="imginstacp"><img src="..\_imagens\instagram.jpg"></figure>
 </footer>
 
 </body>	
