--- a/_html/Sobre.html
+++ b/_html/Sobre.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href=".\main.css">
+    <link rel="stylesheet" type="text/css" href="..\_css\main.css">
 </head>
 
 <body>
 
-<figure class="icone"><img src=".\iconesobre.jpg"></figure>
+<figure class="icone"><img src="..\_imagens\iconesobre.jpg"></figure>
 
 
 <nav id="menu">
@@ -27,7 +27,7 @@
 
 <div id="perfilacao">
 
-	<figure class="fotoperfil"><img src='.\Foto de Perfil.png'></figure>
+	<figure class="fotoperfil"><img src='..\_imagens\Foto de Perfil.png'></figure>
 	<h1>Arthur Andrade Lacet Florêncio</h1></br></br>
 	<h2>18 anos</h2></br></br>
 	<h3>1° Período - Ciência da Computação</br></br>
@@ -46,7 +46,7 @@
 
 <footer id='rodape'>
 	<a target='_blank' href="https://www.instagram.com/arthur_lacet/" id="insta"> Instagram </a>
-	<figure class="imginsta"><img src=".\instagram.jpg"></figure>
+	<figure class="imginsta"><img src="..\_imagens\instagram.jpg"></figure>
 </footer>
 
 </body>	
