--- a/_html/vidaacademica.html
+++ b/_html/vidaacademica.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href=".\main.css">
+    <link rel="stylesheet" type="text/css" href="..\_css\main.css">
 </head>
 
 <body>
 
-<figure class="iconeva"><img src=".\iconevidaacademica.jpg"></figure>
+<figure class="iconeva"><img src="..\_imagens\iconevidaacademica.jpg"></figure>
 
 <nav id="menu">
 <ol>
@@ -22,7 +22,7 @@
 
 <div id="perfilacao">
 
-	<figure class="fotoperfil"><img src='.\Foto de Perfil.png'></figure>
+	<figure class="fotoperfil"><img src='..\_imagens\Foto de Perfil.png'></figure>
 	<h1>Arthur Andrade Lacet Florêncio</h1></br></br>
 	<h2>18 anos</h2></br></br>
 	<h3>1° Período - Ciência da Computação</br></br>
@@ -44,7 +44,7 @@
 
 <footer id='rodape' >
 	<a id='instava' target='_blank' href="https://www.instagram.com/arthur_lacet/" > Instagram </a>
-	<figure class="imginstava"><img src=".\instagram.jpg"></figure>
+	<figure class="imginstava"><img src="..\_imagens\instagram.jpg"></figure>
 </footer>
 
 </body>
